Enhance order handling with item color support
Added support for item color in orders and finalized orders.